# cognita

./: .gitignore  Dockerfile.api.dev  Dockerfile.client.dev  README.md  config.yaml  dev.sh  docker-compose.dev.yml  pyproject.toml  requirements.txt
cognita_api/: __init__.py
cognita_api/controllers/: __init__.py  auth.py  plugins.py  user.py
cognita_api/controllers/collections/: __init__.py  collections_files.py  files.py  util.py
cognita_api/models/: __init__.py  auth.py  base.py  collections.py  links.py
cognita_api/util/: __init__.py  config.py  context.py  events.py  injections.py  session_middleware.py
cognita_api/util/plugin/: __init__.py  models.py
cognita_client/: index.html  package.json  vite.config.ts
cognita_client/public/: test.js
cognita_client/src/: App.tsx  routes.tsx
cognita_client/src/components/: DynamicIcon.tsx  PasswordInput.tsx
cognita_client/src/components/modals/: index.tsx  types.ts
cognita_client/src/lang/: en.json
cognita_client/src/sass/: index.scss
cognita_client/src/sass/modals/: collection_files.scss  index.scss  user_settings.scss
cognita_client/src/sass/views/: auth.scss  collections.scss  index.scss  layout.scss
cognita_client/src/types/: auth.ts  collections.ts  plugin.ts
cognita_client/src/util/: events.ts  notifications.tsx  remoteLoader.ts
cognita_client/src/util/api/: ApiProvider.tsx  index.ts  types.ts
cognita_client/src/util/events/: EventsProvider.tsx  index.ts  types.ts
cognita_client/src/util/plugin/: ExportComponent.tsx  PluginProvider.tsx  hooks.ts  index.ts  index.tsx  types.ts
(+17 files in other folders)
